--- a/app/assets/templates/tapor/loading.html
+++ b/app/assets/templates/tapor/loading.html
@@ -2,7 +2,7 @@
 <div class='row' class='tapor-container'>
 	<div class='col-md-12'>
 		<!-- <p class='text-center'> -->
-			<i class="fa fa-5x fa-cog fa-spin"></i>
+			<i class="fa fa-5x fa-refresh fa-spin"></i>
 		<!-- </p> -->
 	</div>
 </div>
