Added more paginators

--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -24,9 +24,14 @@
 				<div ng-bind-html="tool.description"></div>				
 			</div>
 		</div>
-
-
-	
 	
 	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<pagination total-items="tools_page.meta.count" ng-model="current_page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>	
+		</div>
+	</div>
+
+
 </div>
