--- a/app/assets/templates/users/index.html
+++ b/app/assets/templates/users/index.html
@@ -66,4 +66,13 @@
 			</table>
 		</div>
 	</div>
+
+
+	<div class="row">
+		<div class="col-md-12">
+			<pagination total-items="users_page.meta.count" ng-model="current_page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>
+		</div>
+	</div>
+
+	
 </div>
