--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -81,7 +81,10 @@ app.config(['$routeProvider', '$locationProvider',
         templateUrl: "<%= asset_path('attributes/index.html') %>",
       })
       .when('/attributes/new', {
-        templateUrl: "<%= asset_path('attributes/new.html') %>",
+        templateUrl: "<%= asset_path('attributes/edit.html') %>",
+      })
+      .when('/attributes/edit/:id', {
+        templateUrl: "<%= asset_path('attributes/edit.html') %>",
       })
       // Lists
       // .when('/lists', {
