--- a/app/assets/templates/attributes/edit.html
+++ b/app/assets/templates/attributes/edit.html
@@ -1,4 +1,4 @@
-<div ng-controller='AttributesNewController' class='tapor-container'>
+<div ng-controller='AttributesEditController' class='tapor-container'>
 	  <div class='row'>
 	  	<form class="form-horizontal" role="form">
 	  		  <!-- name -->
