Can now list attributes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,9 +70,8 @@
 						      <li><a href="/tools/featured">Featured tools</a></li>
 						      <li><a href="/pages">Pages</a></li>
 						      <li><a href="/attributes/new">Add attribute</a></li>
-						      <li><a href="#">list attributes</a></li>
+						      <li><a href="/attributes">List attributes</a></li>
 						      <li><a href="#">Remap attributes</a></li>
-						      <li><a href="#">List tags</a></li>
 						      <li><a href="/users">Manage users</a></li>
 						    </ul>
 						  </div>
