--- a/app/assets/templates/attributes/edit.html
+++ b/app/assets/templates/attributes/edit.html
@@ -12,15 +12,15 @@
 					<!-- possible values -->					
 
 					<div class="form-group">
-						<label for="inputPossible" class="col-sm-2 control-label">Possible values</label>
+						<label for="inputPossible" class="col-sm-2 control-label">Attribute values</label>
 						<div class="col-sm-5">
 					  	<!-- <input type="text" class="form-control" id="inputPossible" placeholder="Name" ng-model="data.name"> -->
 							
 					  	
-					  	<span ng-repeat='value in data.possible_values track by $index' >
+					  	<span ng-repeat='value in data.attribute_values' >
 					  		<div class='row possible-value'>
 						  		<div class="col-sm-10">
-										<input type="text" class="form-control" id="inputPossible$index" placeholder="Value" ng-model="data.possible_values[$index]">
+										<input type="text" class="form-control" id="inputPossible$index" placeholder="Value" ng-model="value.name">
 									</div>
 									
 									<div class="col-sm-2">
@@ -65,7 +65,7 @@
 
 					<div class="form-group">
       			<div class="col-sm-offset-2 col-sm-10">
-        			<button ng-click="createAttribute()" class="btn btn-default">Create</button>
+        			<button ng-click="saveAttribute()" class="btn btn-default">Save</button>
       			</div>
     			</div>
     
