--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -2,6 +2,22 @@
 
 <div class="row">
 	<div class="col-md-12">
+		<form class="form-inline">
+			<span ng-repeat="attribute in attributes">
+				<div class="form-group">		
+					<label>{{attribute.name}}</label>
+					<select class='form-control' ng-model='attribute.model' ng-options='value.name for value in attribute.attribute_values track by value.id' ng-change='update_attributes_filter()'>
+						<option selected name=''></option>
+					</select>
+				</div>
+			</span>
+
+			</form>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-12">
 		<pagination total-items="tools_page.meta.count" ng-model="current_page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>	
 	</div>
 </div>
