Carousel does not change height

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -3,12 +3,9 @@
 <div class='row'>
 	<div class="col-md-12">
 
-
-
 	<!--  -->
 
-
-	  <carousel interval="50000">
+	  <carousel interval="50000" class="tapor-carousel">
       <slide ng-repeat="tool in featured" active="slide.active">
         <img ng-src="{{tool.image_url}}" style="margin:auto;" height="440" width="550">
         <div class="carousel-caption">
@@ -17,7 +14,7 @@
       </slide>
     </carousel>
 
-<!--  -->
+	<!--  -->
 
 	</div>
 </div>
