--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 						      <span class="caret"></span>
 						    </button>
 						    <ul class="dropdown-menu" role="menu">
-						      <li><a href="/users/profile">Profile</a></li>
+						      <li><a href="/users/{{current_user.id}}">Profile</a></li>
 						      <li><a href="#">My tools</a></li>
 						      <li><a href="/tools/new">Add tool</a></li>
 						      <li><a href="#">My lists</a></li>
