--- a/app/assets/templates/pages/view.html
+++ b/app/assets/templates/pages/view.html
@@ -1,4 +1,4 @@
-<div ng-controller='PagesDetailController' class='tapor-container'>
+<div ng-controller='PagesViewController' class='tapor-container'>
 	<div class="row">
 		<div class="col-md-10">		
 			<h1>{{data.title}}</h1>
