--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -1,4 +1,4 @@
-<div ng-controller='ToolsDetailController' class='tapor-container'>
+<div ng-controller='ToolsViewController' class='tapor-container'>
 
 	<div class="row">
 		<!-- left content -->
