Removed named ids from front end (need to remove them from back end) Modified image sizes in place

--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -76,6 +76,11 @@ app.config(['$routeProvider', '$locationProvider',
       .when('/users/:id', {
         templateUrl: "<%= asset_path('users/view.html') %>",
       })
+      .when('/users/:id/edit', {
+        templateUrl: "<%= asset_path('users/edit.html') %>",
+      })
+
+
       // Attributes
       .when('/attributes', {
         templateUrl: "<%= asset_path('attributes/index.html') %>",
