--- a/app/assets/templates/users/view.html
+++ b/app/assets/templates/users/view.html
@@ -44,14 +44,24 @@
       <div ng-repeat="tool_list in tool_lists">
         <div class="row">
           <div class="col-md-3">
-            {{tool_list.name}}
-            {{tool_list.description}}
+            <div class="row">
+              <div class="col-md-12">
+                <a href="/tool_lists/{{tool_list.id}}"><label>{{tool_list.name}}</label></a>
+              </div>
+             </div>
+             <div class="row">
+              <div class="col-md-12">
+                {{tool_list.description}}
+              </div>
+             </div>
           </div>
-          <div class="col-md-9 horizontal-scrolling">
+          <div class="col-md-9 horizontal-scrolling well">
             
             <ul class="list-inline list-unstyled">
               <li ng-repeat="item in tool_list.tool_list_items">
-                <img src="{{item.tool.thumb_url}}">
+                <a href="/tools/{{item.tool.id}}">
+                  <img src="{{item.tool.thumb_url}}">
+                </a>
               </li>
             </ul>
             
