Adding tool_lists list view

--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -98,6 +98,9 @@ app.config(['$routeProvider', '$locationProvider',
       //   controller: 'ListsPublicCtrl'
       // })
 
+      .when('/tool_lists', {
+        templateUrl: "<%= asset_path('tool_lists/index.html') %>",
+      })
       .when('/tool_lists/contributing', {
         templateUrl: "<%= asset_path('tool_lists/contributing.html') %>",
       })
