--- a/app/assets/templates/tool_lists/index.html
+++ b/app/assets/templates/tool_lists/index.html
@@ -1,5 +1,41 @@
 
 <div ng-controller='ListsIndexController' class='tapor-container'>
-Test	
 
+<div class="row">
+	<div class="col-md-12">
+		<pagination total-items="tool_lists_page.meta.count" ng-model="current_page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>	
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-12">
+	  <div ng-repeat="tool_list in tool_lists_page.tool_lists">
+	    <div class="row">
+	      <div class="col-md-3">
+	        <div class="row">
+	          <div class="col-md-12">
+	            <a href="/tool_lists/{{tool_list.id}}"><label>{{tool_list.name}}</label></a>
+	          </div>
+	         </div>
+	         <div class="row">
+	          <div class="col-md-12">
+	            {{tool_list.description}}
+	          </div>
+	         </div>
+	      </div>
+	      <div class="col-md-9 horizontal-scrolling well" >
+	        
+	        <ul class="list-inline list-unstyled">
+	          <li ng-repeat="item in tool_list.tool_list_items">
+	            <a href="/tools/{{item.tool.id}}">
+	              <img src="{{item.tool.thumb_url}}">
+	            </a>
+	          </li>
+	        </ul>
+	        
+	      </div>
+	    </div>
+	  </div>
+	</div>
+</div>
 </div> 
