Started work on Code as tool Fixed error with new tool where attributes were not rendered

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -49,6 +49,12 @@
       </div>
     </div>
 
+    <!-- nature -->
+   
+    <!-- language -->
+   
+    <!-- code -->
+
     <!-- creator name -->
 
     <div class="form-group">
@@ -227,7 +233,7 @@
     <div class="form-group" ng-repeat='attribute in data.tool_attributes' >
       <label for="inputName" class="col-sm-2 control-label">{{attribute.name}}</label>
       <div class="col-sm-6">
-         <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.possible_values"> </div>
+         <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.attribute_values"> </div>
       </div>
     </div>
    
