--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -50,7 +50,12 @@
     </div>
 
     <!-- nature -->
-   
+     <div class="form-group">
+      <label for="inputNature" class="col-sm-2 control-label">Type</label>
+      <div class="col-sm-6  ">
+        <div multselect add-empty="false" is-multiple="false" model="data.nature" name="nature" values="possible_nature"> </div> {{data.nature}}
+      </div>
+    </div>
     <!-- language -->
    
     <!-- code -->
@@ -233,7 +238,7 @@
     <div class="form-group" ng-repeat='attribute in data.tool_attributes' >
       <label for="inputName" class="col-sm-2 control-label">{{attribute.name}}</label>
       <div class="col-sm-6">
-         <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.attribute_values"> </div>
+         <div multselect add-empty="true" is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.attribute_values"> </div>
       </div>
     </div>
    
