Removed debug message

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -53,7 +53,7 @@
      <div class="form-group">
       <label for="inputNature" class="col-sm-2 control-label">Type</label>
       <div class="col-sm-6  ">
-        <div multselect add-empty="false" is-multiple="false" model="data.nature" name="nature" values="possible_nature"> </div> {{data.nature}}
+        <div multselect add-empty="false" is-multiple="false" model="data.nature" name="nature" values="possible_nature"> </div>
       </div>
     </div>
     <!-- language -->
