Work on adding Xapian initialized. Changed description variable name to detail in order to avoid problems with Xapian.

--- a/app/assets/templates/tool_lists/contributing.html
+++ b/app/assets/templates/tool_lists/contributing.html
@@ -49,7 +49,7 @@
 						</h4>
 					</div>
 					<div class="row">
-						{{list.description}}
+						{{list.detail}}
 					</div>
 					<div class="row">
 						Showing X of {{list.tool_list_items.length}}
