--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -35,7 +35,7 @@
 
             	<div class="row">
             		<div class="col-sm-12">
-            			<div ng-bind-html="tool.description"></div>
+            			<div ng-bind-html="tool.detail"></div>
             		</div>
             	</div>
             
@@ -74,7 +74,7 @@
   				<div class="row">
   					<div class="col-sm-12">					
   						<h5>Description</h5>
-  						<textarea class="form-control noresize-textarea" rows="3" id="inputDescription" ng-model="data.description" placeholder="About your list"></textarea>					
+  						<textarea class="form-control noresize-textarea" rows="3" id="inputDescription" ng-model="data.detail" placeholder="About your list"></textarea>					
   					</div>
   				</div> 
           </form>
