--- a/app/assets/templates/tool_lists/view.html
+++ b/app/assets/templates/tool_lists/view.html
@@ -16,7 +16,7 @@
 			  </div>
 			  <div class="panel-body">
 			  	<div class="well">
-			  		{{data.description}}
+			  		{{data.detail}}
 			  	</div>
 			    
 			  	<div class="well" ng-repeat="item in data.tool_list_items">
