--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -40,12 +40,12 @@
     </div>
 
 
-    <!-- description -->
+    <!-- detail -->
 
     <div class="form-group">
       <label for="inputDescription" class="col-sm-2 control-label">Description</label>
       <div class="col-sm-6	">
-        <textarea class="form-control vertical-text-area" rows="3" id="inputDescription" ng-model="data.description" placeholder="About your tool"></textarea>
+        <textarea class="form-control vertical-text-area" rows="3" id="inputDescription" ng-model="data.detail" placeholder="About your tool"></textarea>
       </div>
     </div>
 
