--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -37,7 +37,7 @@
 				<label><a href='tools/{{tool.id}}'>{{tool.name}}</a></label>
 			</div>
 			<div class="row">
-				<div ng-bind-html="tool.description"></div>				
+				<div ng-bind-html="tool.detail"></div>				
 			</div>
 		</div>
 	
