--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -25,7 +25,7 @@
 
 								
 							</div>
-							<div ng-bind-html="data.tool.description"></div>
+							<div ng-bind-html="data.tool.detail"></div>
 						</div>
 					</div>									
 				</div>
@@ -123,7 +123,7 @@
 											<a href="/tool_lists/{{related.id}}">{{related.name}}</a>
 										</div>
 										<div class="panel-body">
-											{{related.description}}
+											{{related.detail}}
 										</div>
 									</div>
 								</div>
