--- a/app/assets/templates/tool_lists/index.html
+++ b/app/assets/templates/tool_lists/index.html
@@ -19,7 +19,7 @@
 	         </div>
 	         <div class="row">
 	          <div class="col-md-12">
-	            {{tool_list.description}}
+	            {{tool_list.detail}}
 	          </div>
 	         </div>
 	      </div>
