--- a/app/assets/templates/tools/featured.html
+++ b/app/assets/templates/tools/featured.html
@@ -41,7 +41,7 @@
 
 <!--             	<div class="row">
             		<div class="col-sm-12">
-            			{{tool.description}}
+            			{{tool.detail}}
             		</div>
             	</div> -->
             
@@ -98,7 +98,7 @@
 
 <!--             	<div class="row">
             		<div class="col-sm-12">
-            			{{tool.description}}
+            			{{tool.detail}}
             		</div>
             	</div> -->
             
