Reverted back to faceted browsing

--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -1,5 +1,6 @@
 <div ng-controller='ToolsIndexController' class='tapor-container'>
 
+<!-- faceting -->
 <div class="row">
 	<div class="col-md-12">
 		<form class="form-inline">
@@ -11,11 +12,11 @@
 					</select>
 				</div>
 			</span>
-
-			</form>
+		</form>
 	</div>
 </div>
 
+<!-- pagination -->
 <div class="row">
 	<div class="col-md-12">
 		<pagination total-items="tools_page.meta.count" ng-model="current_page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>	
@@ -43,6 +44,7 @@
 	
 	</div>
 
+	<!-- pagination -->
 	<div class="row">
 		<div class="col-md-12">
 			<pagination total-items="tools_page.meta.count" ng-model="current_page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>	
