--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -24,7 +24,7 @@
 </div>
 
 	
-
+	<!-- tools -->
 	<div class='row tool-list-entry' ng-repeat="tool in tools_page.tools track by $index">	
 		
 		<div class='col-md-4 tool-list-entry-image'>
