--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-2">
 		<h1>TAPoR 3</h1>
 	</div>
-	<div class="col-md-10" id="tapor-tagline">
+	<div class="col-md-10 tapor-blue" id="tapor-tagline">
 		<h1>Discover research tools for studying texts.</h1>
 	</div>
 </div>
