--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -88,7 +88,9 @@
 
 			</div>
 			<!-- latest lists -->
-			<div class="row">
+			<div class="row" ng-repeat="list in latest_lists">
+
+			<div compressed list='list'></div>
 				
 			</div>
 			<!-- latest tools -->
