--- a/app/views/home/_navigation.html.erb
+++ b/app/views/home/_navigation.html.erb
@@ -1,5 +1,42 @@
 <div class="row" id="tapor-navigation">
 	<div class="col-md-12" >
-		nav
+		<ul id="tapor-nav" class="list-unstyled">
+			<li>
+				<a href='#' ng-click="go_to('/pages/about_tapor')">About</a>
+			</li>
+			<li>
+				<a href='#' ng-click="go_to('/pages/contact')">Contact</a>
+			</li>
+			<li>
+				<a href='#' ng-click="go_to('/tools')">Tools</a>
+			</li>
+			<li>
+				<a href='#' ng-click="go_to('/tool_lists')">Lists</a>
+			</li>
+			<li>
+				<a href='#' ng-click="go_to('/pages/tour')">Tour</a>
+			</li>
+			<li>
+				<a href='#' ng-click="go_to('/pages/tutorials')">Tutorials</a>
+			</li>
+			<li>
+				<a href='#' ng-click="go_to('/pages/useful_links')">Useful links</a>
+			</li>
+			<li ng-if="current_user == null">
+				<a href='#' ng-click="go_to('/signin')">Login</a>
+			</li>
+			<li ng-if="current_user != null">
+				<a href='#' ng-click="go_to('/users/{{current_user.id}}')">Profile</a>
+			</li>
+			<li ng-if="current_user != null">
+				<a href='#' ng-click="go_to('/tools/new')">Add tool</a>
+			</li>
+			<li ng-if="current_user != null">
+				<a href='#' ng-click="go_to('/tool_lists/new')">Add list</a>
+			</li>
+			<li ng-if="current_user != null">
+				<a href='/sign_out'>Logout</a>
+			</li>
+		</ul>
 	</div>
 </div>
